all changes to make the site deploy on s3 except cdn url stuff. asset packaging also done. just need s3 url and cdn url, and one change to make cdn work.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 markdown: rdiscount
 pygments: true
+destination: ./_site
+plugins:     ./_plugins
+
+jammit_base_dir: .
+exclude: Gemfile, Gemfile.lock, README.md, Rakefile
+
