--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ plugins:     ./_plugins
 
 jammit_base_dir: .
 exclude: Gemfile, Gemfile.lock, README.md, Rakefile
-cdn: # enter cdn here
+cdn: do6z53br98y8i.cloudfront.net
